Fix endpoint prediction class

--- a/notebooks/azure_endpoint.ipynb
+++ b/notebooks/azure_endpoint.ipynb
@@ -2,245 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "60e79391",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response from DeBERTa endpoint:\n",
-      "\"{\\\"predictions\\\": {\\\"emotion\\\": \\\"unknown\\\", \\\"sub_emotion\\\": \\\"unknown\\\", \\\"intensity\\\": \\\"unknown\\\"}, \\\"raw_predictions\\\": {\\\"emotion\\\": [[-2.3535149097442627, -2.7075352668762207, -2.1163432598114014, 2.768012762069702, 3.4213383197784424, -2.740438461303711, 1.3640868663787842]], \\\"sub_emotion\\\": [[-0.908567488193512, 0.7767903208732605, -4.667848587036133, -0.5953039526939392, -0.41957715153694153, -0.660086452960968, 1.8608988523483276, 4.128921985626221, -2.0373587608337402, -1.554884910583496, -1.1481451988220215, -3.3077480792999268, -3.654724597930908, -0.7455893754959106, -2.2528023719787598, -4.40749454498291, -5.066255569458008, -2.410703182220459, -4.219160079956055, -0.38470709323883057, 4.7725701332092285, 0.5356895327568054, -0.6146451234817505, 2.2942633628845215, 0.11964304745197296, -4.125598907470703, -2.3472158908843994, -0.8247337937355042]], \\\"intensity\\\": [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]}, \\\"confidence_scores\\\": {\\\"emotion\\\": [[-2.3535149097442627, -2.7075352668762207, -2.1163432598114014, 2.768012762069702, 3.4213383197784424, -2.740438461303711, 1.3640868663787842]], \\\"sub_emotion\\\": [[-0.908567488193512, 0.7767903208732605, -4.667848587036133, -0.5953039526939392, -0.41957715153694153, -0.660086452960968, 1.8608988523483276, 4.128921985626221, -2.0373587608337402, -1.554884910583496, -1.1481451988220215, -3.3077480792999268, -3.654724597930908, -0.7455893754959106, -2.2528023719787598, -4.40749454498291, -5.066255569458008, -2.410703182220459, -4.219160079956055, -0.38470709323883057, 4.7725701332092285, 0.5356895327568054, -0.6146451234817505, 2.2942633628845215, 0.11964304745197296, -4.125598907470703, -2.3472158908843994, -0.8247337937355042]], \\\"intensity\\\": [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]}, \\\"status\\\": \\\"success\\\"}\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "import urllib.request\n",
-    "import json\n",
-    " \n",
-    "# Your primary key (replace with secondary if you want)\n",
-    "api_key = '72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9'\n",
-    " \n",
-    "if not api_key:\n",
-    "    raise Exception(\"A key should be provided to invoke the endpoint\")\n",
-    " \n",
-    "# Example input data - adjust this according to your model's expected input format\n",
-    "data = {\n",
-    "        \"text\": \"This is a test sentence to evaluate the DeBERTa endpoint.\"\n",
-    "    }\n",
-    " \n",
-    "# Encode the data to JSON bytes\n",
-    "body = str.encode(json.dumps(data))\n",
-    " \n",
-    "# Your endpoint URL\n",
-    "url = 'http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score'\n",
-    " \n",
-    "# Set the request headers including authorization with your API key\n",
-    "headers = {\n",
-    "    'Content-Type': 'application/json',\n",
-    "    'Accept': 'application/json',\n",
-    "    'Authorization': 'Bearer ' + api_key\n",
-    "}\n",
-    " \n",
-    "# Prepare the request\n",
-    "req = urllib.request.Request(url, body, headers)\n",
-    " \n",
-    "try:\n",
-    "    # Send the request and read the response\n",
-    "    response = urllib.request.urlopen(req)\n",
-    "    result = response.read()\n",
-    "    print(\"Response from DeBERTa endpoint:\")\n",
-    "    response = eval(result.decode(\"utf-8\"))\n",
-    "    print(response)\n",
-    " \n",
-    "except urllib.error.HTTPError as error:\n",
-    "    # If there's an HTTP error, print status and details\n",
-    "    print(\"The request failed with status code:\", error.code)\n",
-    "    print(\"Headers:\", error.info())\n",
-    "    print(\"Error response:\", error.read().decode(\"utf8\", 'ignore'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "2a7c22f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Emotion:  neutral \n",
-      "Sub-emotion:  melancholy \n",
-      "Intensity:  mild\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example: Complete workflow for getting final predictions\n",
-    "def get_final_predictions(api_response):\n",
-    "    \"\"\"\n",
-    "    Complete workflow to extract and decode predictions from API response.\n",
-    "    \n",
-    "    Args:\n",
-    "        api_response (dict): Full response from the emotion classification API\n",
-    "        \n",
-    "    Returns:\n",
-    "        dict: Final decoded predictions with metadata\n",
-    "    \"\"\"\n",
-    "    if api_response.get('status') != 'success':\n",
-    "        return {'error': 'API call was not successful'}\n",
-    "    \n",
-    "    # Extract raw predictions\n",
-    "    raw_predictions = api_response.get('raw_predictions', {})\n",
-    "    \n",
-    "    # Decode predictions\n",
-    "    final_predictions = decode_predictions(raw_predictions)\n",
-    "    \n",
-    "    if final_predictions:\n",
-    "        # Add metadata\n",
-    "        final_predictions['status'] = 'success'\n",
-    "        final_predictions['input_text'] = \"This is a test sentence to evaluate the DeBERTa endpoint.\"\n",
-    "        final_predictions['model_info'] = {\n",
-    "            'endpoint': 'deberta-emotion-clf-endpoint',\n",
-    "            'prediction_classes': {\n",
-    "                'emotions_available': len(emotion_encoder.classes_),\n",
-    "                'sub_emotions_available': len(sub_emotion_encoder.classes_),\n",
-    "                'intensities_available': len(intensity_encoder.classes_)\n",
-    "            }\n",
-    "        }\n",
-    "    \n",
-    "    return final_predictions\n",
-    "\n",
-    "# Get the final prediction dictionary\n",
-    "pred_d = get_final_predictions(response)\n",
-    "\n",
-    "emotion, sub_emotion, intensity = pred_d.get(\"emotion\"), pred_d.get(\"sub_emotion\"), pred_d.get(\"intensity\")\n",
-    "\n",
-    "print(\"Emotion: \", emotion, \n",
-    "      \"\\nSub-emotion: \", sub_emotion, \n",
-    "      \"\\nIntensity: \", intensity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "14c32c82",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'predictions': {'emotion': 'unknown',\n",
-       "  'sub_emotion': 'unknown',\n",
-       "  'intensity': 'unknown'},\n",
-       " 'raw_predictions': {'emotion': [[-2.3535149097442627,\n",
-       "    -2.7075352668762207,\n",
-       "    -2.1163432598114014,\n",
-       "    2.768012762069702,\n",
-       "    3.4213383197784424,\n",
-       "    -2.740438461303711,\n",
-       "    1.3640868663787842]],\n",
-       "  'sub_emotion': [[-0.908567488193512,\n",
-       "    0.7767903208732605,\n",
-       "    -4.667848587036133,\n",
-       "    -0.5953039526939392,\n",
-       "    -0.41957715153694153,\n",
-       "    -0.660086452960968,\n",
-       "    1.8608988523483276,\n",
-       "    4.128921985626221,\n",
-       "    -2.0373587608337402,\n",
-       "    -1.554884910583496,\n",
-       "    -1.1481451988220215,\n",
-       "    -3.3077480792999268,\n",
-       "    -3.654724597930908,\n",
-       "    -0.7455893754959106,\n",
-       "    -2.2528023719787598,\n",
-       "    -4.40749454498291,\n",
-       "    -5.066255569458008,\n",
-       "    -2.410703182220459,\n",
-       "    -4.219160079956055,\n",
-       "    -0.38470709323883057,\n",
-       "    4.7725701332092285,\n",
-       "    0.5356895327568054,\n",
-       "    -0.6146451234817505,\n",
-       "    2.2942633628845215,\n",
-       "    0.11964304745197296,\n",
-       "    -4.125598907470703,\n",
-       "    -2.3472158908843994,\n",
-       "    -0.8247337937355042]],\n",
-       "  'intensity': [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]},\n",
-       " 'confidence_scores': {'emotion': [[-2.3535149097442627,\n",
-       "    -2.7075352668762207,\n",
-       "    -2.1163432598114014,\n",
-       "    2.768012762069702,\n",
-       "    3.4213383197784424,\n",
-       "    -2.740438461303711,\n",
-       "    1.3640868663787842]],\n",
-       "  'sub_emotion': [[-0.908567488193512,\n",
-       "    0.7767903208732605,\n",
-       "    -4.667848587036133,\n",
-       "    -0.5953039526939392,\n",
-       "    -0.41957715153694153,\n",
-       "    -0.660086452960968,\n",
-       "    1.8608988523483276,\n",
-       "    4.128921985626221,\n",
-       "    -2.0373587608337402,\n",
-       "    -1.554884910583496,\n",
-       "    -1.1481451988220215,\n",
-       "    -3.3077480792999268,\n",
-       "    -3.654724597930908,\n",
-       "    -0.7455893754959106,\n",
-       "    -2.2528023719787598,\n",
-       "    -4.40749454498291,\n",
-       "    -5.066255569458008,\n",
-       "    -2.410703182220459,\n",
-       "    -4.219160079956055,\n",
-       "    -0.38470709323883057,\n",
-       "    4.7725701332092285,\n",
-       "    0.5356895327568054,\n",
-       "    -0.6146451234817505,\n",
-       "    2.2942633628845215,\n",
-       "    0.11964304745197296,\n",
-       "    -4.125598907470703,\n",
-       "    -2.3472158908843994,\n",
-       "    -0.8247337937355042]],\n",
-       "  'intensity': [[3.7233965396881104, 1.0488967895507812, -3.915595293045044]]},\n",
-       " 'status': 'success'}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff0f9847",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71f8aba0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "165332a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emotion': 'happiness', 'sub_emotion': 'admiration', 'intensity': 'moderate'}\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "import json\n",
@@ -333,17 +106,20 @@
     "        try:\n",
     "            # If predictions are logits, take argmax\n",
     "            if isinstance(raw_predictions.get(\"emotion\"), (list, np.ndarray)):\n",
-    "                emotion_idx = int(np.argmax(raw_predictions[\"emotion\"]))\n",
+    "                # The raw_predictions are nested inside another list, so we take the first element [0]\n",
+    "                emotion_idx = int(np.argmax(raw_predictions[\"emotion\"][0]))\n",
     "            else:\n",
     "                emotion_idx = int(raw_predictions[\"emotion\"])\n",
     "            if isinstance(raw_predictions.get(\"sub_emotion\"), (list, np.ndarray)):\n",
-    "                sub_emotion_logits = np.array(raw_predictions[\"sub_emotion\"])\n",
+    "                 # The raw_predictions are nested inside another list, so we take the first element [0]\n",
+    "                sub_emotion_logits = np.array(raw_predictions[\"sub_emotion\"][0])\n",
     "                # Will post-process below\n",
     "            else:\n",
     "                sub_emotion_logits = None\n",
     "                sub_emotion_idx = int(raw_predictions[\"sub_emotion\"])\n",
     "            if isinstance(raw_predictions.get(\"intensity\"), (list, np.ndarray)):\n",
-    "                intensity_idx = int(np.argmax(raw_predictions[\"intensity\"]))\n",
+    "                 # The raw_predictions are nested inside another list, so we take the first element [0]\n",
+    "                intensity_idx = int(np.argmax(raw_predictions[\"intensity\"][0]))\n",
     "            else:\n",
     "                intensity_idx = int(raw_predictions[\"intensity\"])\n",
     "        except Exception as e:\n",
@@ -387,26 +163,87 @@
     "            \"intensity\": intensity\n",
     "        }\n",
     "\n",
-    "    def predict(self, text):\n",
+    "    def predict(self, text: str) -> dict:\n",
     "        \"\"\"\n",
     "        Full workflow: get prediction, decode, and post-process.\n",
+    "        Handles double-encoded JSON from the API.\n",
     "        \"\"\"\n",
-    "        api_response = self.get_prediction(text)\n",
-    "        if api_response.get('status') != 'success':\n",
-    "            raise RuntimeError(\"API call was not successful\")\n",
-    "        raw_predictions = api_response.get('raw_predictions', {})\n",
-    "        return self.decode_and_postprocess(raw_predictions)\n",
+    "\n",
+    "        max_retry = 5\n",
+    "\n",
+    "        for retry_count in range(max_retry):\n",
+    "\n",
+    "            try:\n",
+    "\n",
+    "                # 1. Get the initial response from the API (which is a string containing JSON)\n",
+    "                api_response_string = self.get_prediction(text)\n",
+    "\n",
+    "                # 2. Parse this string to get the actual dictionary payload\n",
+    "                payload_dict = json.loads(api_response_string)\n",
+    "\n",
+    "                # 3. Get raw prediction\n",
+    "                raw_predictions = payload_dict.get(\"raw_predictions\")\n",
+    "\n",
+    "                # 4. Now, pass the clean dictionary of predictions to be processed\n",
+    "                output = self.decode_and_postprocess(raw_predictions)\n",
+    "\n",
+    "                # Break the loop\n",
+    "                break\n",
+    "\n",
+    "            except:\n",
+    "                continue\n",
+    "\n",
+    "        #    We also check if the status is \"success\" as a safeguard.\n",
+    "        if payload_dict.get(\"status\") != \"success\":\n",
+    "            raise RuntimeError(f\"API did not return a success status. Full response: {payload_dict}\")\n",
+    "\n",
+    "        return output\n",
+    "\n",
     "\n",
     "# Example usage:\n",
-    "# predictor = AzureEmotionPredictor(api_key, endpoint_url, encoders_dir=\"models/encoders\")\n",
-    "# result = predictor.predict(\"This is a test sentence to evaluate the DeBERTa endpoint.\")\n",
-    "# print(result)"
+    "predictor = AzureEmotionPredictor(\n",
+    "    api_key='72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9', \n",
+    "    endpoint_url='http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score', \n",
+    "    encoders_dir=\"../models/encoders\")\n",
+    "result = predictor.predict(\"i'm really admiring what you do\")\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234efd9f",
+   "id": "4756a8a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf0b1e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4c28f51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a61a219",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "emotion-clf-pipeline",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
