--- a/notebooks/azure_endpoint.ipynb
+++ b/notebooks/azure_endpoint.ipynb
@@ -2,248 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "165332a4",
+   "execution_count": 2,
+   "id": "fff6a014",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'emotion': 'happiness', 'sub_emotion': 'admiration', 'intensity': 'moderate'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "import json\n",
-    "import pickle\n",
-    "import numpy as np\n",
+    "import sys\n",
+    "import os\n",
+    "import logging\n",
     "\n",
-    "class AzureEmotionPredictor:\n",
-    "    \"\"\"\n",
-    "    Handles emotion prediction via Azure endpoint, decoding, and post-processing.\n",
-    "    Ensures sub-emotion is valid for the predicted main emotion.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, api_key, endpoint_url, encoders_dir=\"models/encoders\"):\n",
-    "        \"\"\"\n",
-    "        Initialize with API key, endpoint URL, and encoder directory.\n",
-    "        \"\"\"\n",
-    "        self.api_key = api_key\n",
-    "        self.endpoint_url = endpoint_url\n",
-    "        self.encoders_dir = encoders_dir\n",
-    "        self.emotion_mapping = {\n",
-    "            \"curiosity\": \"happiness\",\n",
-    "            \"neutral\": \"neutral\",\n",
-    "            \"annoyance\": \"anger\",\n",
-    "            \"confusion\": \"surprise\",\n",
-    "            \"disappointment\": \"sadness\",\n",
-    "            \"excitement\": \"happiness\",\n",
-    "            \"surprise\": \"surprise\",\n",
-    "            \"realization\": \"surprise\",\n",
-    "            \"desire\": \"happiness\",\n",
-    "            \"approval\": \"happiness\",\n",
-    "            \"disapproval\": \"disgust\",\n",
-    "            \"embarrassment\": \"fear\",\n",
-    "            \"admiration\": \"happiness\",\n",
-    "            \"anger\": \"anger\",\n",
-    "            \"optimism\": \"happiness\",\n",
-    "            \"sadness\": \"sadness\",\n",
-    "            \"joy\": \"happiness\",\n",
-    "            \"fear\": \"fear\",\n",
-    "            \"remorse\": \"sadness\",\n",
-    "            \"gratitude\": \"happiness\",\n",
-    "            \"disgust\": \"disgust\",\n",
-    "            \"love\": \"happiness\",\n",
-    "            \"relief\": \"happiness\",\n",
-    "            \"grief\": \"sadness\",\n",
-    "            \"amusement\": \"happiness\",\n",
-    "            \"caring\": \"happiness\",\n",
-    "            \"nervousness\": \"fear\",\n",
-    "            \"pride\": \"happiness\",\n",
-    "        }\n",
-    "        self._load_encoders()\n",
-    "\n",
-    "    def _load_encoders(self):\n",
-    "        \"\"\"\n",
-    "        Load label encoders for emotion, sub_emotion, and intensity.\n",
-    "        \"\"\"\n",
-    "        try:\n",
-    "            with open(f\"{self.encoders_dir}/emotion_encoder.pkl\", \"rb\") as f:\n",
-    "                self.emotion_encoder = pickle.load(f)\n",
-    "            with open(f\"{self.encoders_dir}/sub_emotion_encoder.pkl\", \"rb\") as f:\n",
-    "                self.sub_emotion_encoder = pickle.load(f)\n",
-    "            with open(f\"{self.encoders_dir}/intensity_encoder.pkl\", \"rb\") as f:\n",
-    "                self.intensity_encoder = pickle.load(f)\n",
-    "        except Exception as e:\n",
-    "            raise RuntimeError(f\"Failed to load encoders: {e}\")\n",
-    "\n",
-    "    def get_prediction(self, text):\n",
-    "        \"\"\"\n",
-    "        Send a request to the Azure endpoint and return the raw response.\n",
-    "        \"\"\"\n",
-    "        data = {\"text\": text}\n",
-    "        body = str.encode(json.dumps(data))\n",
-    "        headers = {\n",
-    "            'Content-Type': 'application/json',\n",
-    "            'Accept': 'application/json',\n",
-    "            'Authorization': 'Bearer ' + self.api_key\n",
-    "        }\n",
-    "        req = urllib.request.Request(self.endpoint_url, body, headers)\n",
-    "        try:\n",
-    "            response = urllib.request.urlopen(req)\n",
-    "            result = response.read()\n",
-    "            return json.loads(result.decode(\"utf-8\"))\n",
-    "        except urllib.error.HTTPError as error:\n",
-    "            raise RuntimeError(f\"Request failed: {error.code} {error.read().decode('utf8', 'ignore')}\")\n",
-    "\n",
-    "    def decode_and_postprocess(self, raw_predictions):\n",
-    "        \"\"\"\n",
-    "        Decode raw predictions and post-process sub-emotion to ensure consistency.\n",
-    "        \"\"\"\n",
-    "        # Defensive: handle both logits and index predictions\n",
-    "        try:\n",
-    "            # If predictions are logits, take argmax\n",
-    "            if isinstance(raw_predictions.get(\"emotion\"), (list, np.ndarray)):\n",
-    "                # The raw_predictions are nested inside another list, so we take the first element [0]\n",
-    "                emotion_idx = int(np.argmax(raw_predictions[\"emotion\"][0]))\n",
-    "            else:\n",
-    "                emotion_idx = int(raw_predictions[\"emotion\"])\n",
-    "            if isinstance(raw_predictions.get(\"sub_emotion\"), (list, np.ndarray)):\n",
-    "                 # The raw_predictions are nested inside another list, so we take the first element [0]\n",
-    "                sub_emotion_logits = np.array(raw_predictions[\"sub_emotion\"][0])\n",
-    "                # Will post-process below\n",
-    "            else:\n",
-    "                sub_emotion_logits = None\n",
-    "                sub_emotion_idx = int(raw_predictions[\"sub_emotion\"])\n",
-    "            if isinstance(raw_predictions.get(\"intensity\"), (list, np.ndarray)):\n",
-    "                 # The raw_predictions are nested inside another list, so we take the first element [0]\n",
-    "                intensity_idx = int(np.argmax(raw_predictions[\"intensity\"][0]))\n",
-    "            else:\n",
-    "                intensity_idx = int(raw_predictions[\"intensity\"])\n",
-    "        except Exception as e:\n",
-    "            raise ValueError(f\"Malformed raw predictions: {e}\")\n",
-    "\n",
-    "        # Decode main emotion\n",
-    "        emotion = self.emotion_encoder.inverse_transform([emotion_idx])[0]\n",
-    "\n",
-    "        # Post-process sub-emotion: only allow sub-emotions that map to the predicted emotion\n",
-    "        if sub_emotion_logits is not None:\n",
-    "            sub_emotion_classes = self.sub_emotion_encoder.classes_\n",
-    "            # Get valid sub-emotion indices for this emotion\n",
-    "            valid_indices = [\n",
-    "                i for i, label in enumerate(sub_emotion_classes)\n",
-    "                if self.emotion_mapping.get(label) == emotion\n",
-    "            ]\n",
-    "            if valid_indices:\n",
-    "                # Pick the valid sub-emotion with highest logit\n",
-    "                best_idx = valid_indices[np.argmax(sub_emotion_logits[valid_indices])]\n",
-    "                sub_emotion = sub_emotion_classes[best_idx]\n",
-    "            else:\n",
-    "                # Fallback: pick the most probable sub-emotion\n",
-    "                sub_emotion = self.sub_emotion_encoder.inverse_transform([int(np.argmax(sub_emotion_logits))])[0]\n",
-    "        else:\n",
-    "            # If only index is given, just decode\n",
-    "            sub_emotion = self.sub_emotion_encoder.inverse_transform([sub_emotion_idx])[0]\n",
-    "            # Optionally, check mapping and fallback if not valid\n",
-    "            if self.emotion_mapping.get(sub_emotion) != emotion:\n",
-    "                # Fallback: pick first valid sub-emotion for this emotion\n",
-    "                sub_emotion_classes = self.sub_emotion_encoder.classes_\n",
-    "                valid_labels = [label for label in sub_emotion_classes if self.emotion_mapping.get(label) == emotion]\n",
-    "                if valid_labels:\n",
-    "                    sub_emotion = valid_labels[0]\n",
-    "\n",
-    "        # Decode intensity\n",
-    "        intensity = self.intensity_encoder.inverse_transform([intensity_idx])[0]\n",
-    "\n",
-    "        return {\n",
-    "            \"emotion\": emotion,\n",
-    "            \"sub_emotion\": sub_emotion,\n",
-    "            \"intensity\": intensity\n",
-    "        }\n",
-    "\n",
-    "    def predict(self, text: str) -> dict:\n",
-    "        \"\"\"\n",
-    "        Full workflow: get prediction, decode, and post-process.\n",
-    "        Handles double-encoded JSON from the API.\n",
-    "        \"\"\"\n",
-    "\n",
-    "        max_retry = 5\n",
-    "\n",
-    "        for retry_count in range(max_retry):\n",
-    "\n",
-    "            try:\n",
-    "\n",
-    "                # 1. Get the initial response from the API (which is a string containing JSON)\n",
-    "                api_response_string = self.get_prediction(text)\n",
-    "\n",
-    "                # 2. Parse this string to get the actual dictionary payload\n",
-    "                payload_dict = json.loads(api_response_string)\n",
-    "\n",
-    "                # 3. Get raw prediction\n",
-    "                raw_predictions = payload_dict.get(\"raw_predictions\")\n",
-    "\n",
-    "                # 4. Now, pass the clean dictionary of predictions to be processed\n",
-    "                output = self.decode_and_postprocess(raw_predictions)\n",
-    "\n",
-    "                # Break the loop\n",
-    "                break\n",
-    "\n",
-    "            except:\n",
-    "                continue\n",
-    "\n",
-    "        #    We also check if the status is \"success\" as a safeguard.\n",
-    "        if payload_dict.get(\"status\") != \"success\":\n",
-    "            raise RuntimeError(f\"API did not return a success status. Full response: {payload_dict}\")\n",
-    "\n",
-    "        return output\n",
-    "\n",
-    "\n",
-    "# Example usage:\n",
-    "predictor = AzureEmotionPredictor(\n",
-    "    api_key='72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9', \n",
-    "    endpoint_url='http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score', \n",
-    "    encoders_dir=\"../models/encoders\")\n",
-    "result = predictor.predict(\"i'm really admiring what you do\")\n",
-    "print(result)"
+    "# Setup logging to see the conversion process\n",
+    "logging.basicConfig(level=logging.INFO, format='%(levelname)s: %(message)s')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4756a8a2",
+   "id": "90f400a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add the parent directory to path to import our updated module\n",
+    "sys.path.insert(0, os.path.join(os.path.dirname(os.getcwd()), 'src'))\n",
+    "\n",
+    "# Import local module\n",
+    "from emotion_clf_pipeline.predict import AzureEndpointPredictor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83b19757",
+   "metadata": {},
+   "source": [
+    "#### Option 1 - Using Private URL (auto-converts to NGROK)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "434ffb4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: 🔄 Converting private URL to NGROK: http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n",
+      "INFO: ✅ Converted to server 227 NGROK: https://adsai2.ngrok.dev/port-30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n",
+      "INFO: 🌐 Azure endpoint initialized with NGROK: https://adsai2.ngrok.dev/port-30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictor = AzureEndpointPredictor(\n",
+    "    api_key='72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9', \n",
+    "    endpoint_url='http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score',  # Private URL\n",
+    "    encoders_dir=\"../models/encoders\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e801a2a9",
+   "metadata": {},
+   "source": [
+    "### Option 2 - Using NGROK URL directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ac0954d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: 🔄 Converting private URL to NGROK: http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n",
+      "INFO: ✅ Converted to server 227 NGROK: https://adsai2.ngrok.dev/port-30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n",
+      "INFO: 🌐 Azure endpoint initialized with NGROK: https://adsai2.ngrok.dev/port-30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictor = AzureEndpointPredictor(\n",
+    "    api_key='72fNK2ogONHXje1XShvxvQ3mZUKZN8kErOTKnZBx1xaEd9apKnoZJQQJ99BFAAAAAAAAAAAAINFRAZML3cS9', \n",
+    "    endpoint_url='http://194.171.191.227:30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score',  # Private URL\n",
+    "    encoders_dir=\"../models/encoders\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8359a812",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: 🔄 Attempt 1/5 - Sending request to: https://adsai2.ngrok.dev/port-30526/api/v1/endpoint/deberta-emotion-clf-endpoint/score\n",
+      "INFO: ✅ Prediction successful!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'emotion': 'happiness', 'sub_emotion': 'admiration', 'intensity': 'moderate'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = predictor.predict(\"i'm really admiring what you do\")\n",
+    "result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7cf0b1e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4c28f51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a61a219",
+   "id": "300edf1d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "emotion-clf-pipeline-bOnCAZAr-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
