--- a/notebooks/azure_endpoint.ipynb
+++ b/notebooks/azure_endpoint.ipynb
@@ -134,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "emotion-clf-pipeline-bOnCAZAr-py3.11",
+   "display_name": "emotion-clf-pipeline",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
